# cpp-computervision-memedetector

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  gay.cpp  main.cpp  test2.cpp
